# cmvdr

./: .gitignore  README.md  main.py  pyproject.toml
cmvdr/: __main__.py  audio_disk_loader.py  beamformer.py  beamformer_manager.py  config.py  covariance_estimator.py  cyclic_mvdr.py  cyclic_mwf.py  data_generator.py  evaluator.py  experiment_manager.py  f0_estimator.py  f0_manager.py  freq_shift_fft_domain.py  globs.py  harmonic_info.py  modulator.py  player.py  plotter.py  utils.py
cmvdr/beamforming/: beamformer.py  beamformer_manager.py  cyclic_mvdr.py  cyclic_mwf.py
cmvdr/cli/: cmvdr_inference_cli.py  evaluate_cli.py
cmvdr/data_gen/: audio_disk_loader.py  data_generator.py  f0_manager.py  manager.py  sin_generator.py
cmvdr/estimation/: coherence_manager.py  covariance_estimator.py  f0_estimator.py  modulator.py  spectral_estimator.py
cmvdr/eval/: eval_config.yaml  evaluate_folder.py  evaluator.py  metrics_manager.py
cmvdr/presets/: inference.yaml
cmvdr/util/: config.py  freq_shift_fft_domain.py  harmonic_info.py  player.py  plotter.py  utils.py
configs/: cmvdr.yaml  default.yaml  inference_cmvdr.yaml
configs/experiments/: default.yaml  plot_spectrograms.yaml  real_noises.yaml  synthetic.yaml  synthetic_demo.yaml  synthetic_f0_err.yaml
script/: cmvdr_inference.py  evaluate_folder.py  plot_bandpassed_harmonics_may_2025.py  plot_multiple_vs_delta_strategy_july_2025.py  plot_spectrograms.py  run_all.sh  run_demo.sh  run_synthetic.sh
src/: audio_disk_loader.py  beamformer_manager.py  coherence_manager.py  config.py  covariance_holder.py  cyclic_mvdr.py  cyclic_mwf.py  data_generator.py  evaluator.py  experiment_manager.py  f0_manager.py  freq_shift_fft_domain.py  globs.py  manager.py  player.py  plotter.py  sin_generator.py  spectral_estimator.py  utils.py
test_install_venv/: pyvenv.cfg
tests/: quick_test_modulated_dataset.py  test_audio_disk_loader.py  test_beamformer_manager.py  test_coherence_manager.py  test_cyclic_mvdr.py  test_fft_stft_mult.py  test_fft_stft_scaling.py  test_harmonic_mask.py  test_modulator.py  test_stft_overlap  test_stft_overlap_2.py  test_sys_identifier_manager.py  test_unique_float.py
